# ce205-20242025-project-ahmetbera-celik-cpp

./: .gitignore  7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  README.md  ingredients.huf  mkdocs.yml
.github/workflows/: cpp.yml
docs/coverxygenliblinux/: _mnt_c_Users_Bera_Desktop_ce205_final_ahmetbera_ce_priceadjustment_src_priceadjustment.cpp.html  _mnt_c_Users_Bera_Desktop_ce205_final_ahmetbera_ce_src_budgetplanner_src_budgetplanner.cpp.html  _mnt_c_Users_Bera_Desktop_ce205_final_ahmetbera_ce_src_recipecosting_src_recipecosting.cpp.html  index.htm  index.html  main.js  (+24 more)
project_plan/: Recipe Cost Calculator.pod  project_diagram.puml
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml
report_test_hist_win/: 2023-10-28_19-31-41_CoverageHistory.xml
src/: namespaces.dox
src/tests/: CMakeLists.txt
src/tests/budgetplanner/: CMakeLists.txt  budgetplanner_test.cpp
src/tests/costcalculator/: CMakeLists.txt  costcalculator_test.cpp
src/tests/ingredientmanagement/: CMakeLists.txt  ingredientmanagement_test.cpp
src/tests/priceadjustment/: CMakeLists.txt  priceadjustment_test.cpp
src/tests/recipecosting/: CMakeLists.txt  recipecosting_test.cpp
src/tests/userauthentication/: CMakeLists.txt  userauthentication_test.cpp
(+36 files in other folders)
